# dbt_gcp_training

./: .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  compose.yml  pyproject.toml
dbt_transform/: dbt_project.yml
scripts/: dbt_build.sh  dbt_snapshot.sh
terraform/: 1password.env  artifact_registory.tf  cloud_run.tf  cloud_run_job.tf  cloud_scheduler_job.tf  main.tf  service_account.tf  storage.tf  variables.tf
terraform/modules/: variables.tf
