[tool.poetry]
name = "dbt-workflow-gcp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dbt_workflow_gcp"}]

[tool.poetry.dependencies]
python = "^3.10"
dbt-bigquery = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
